# 7574-ejercicios

./: .gitignore  .travis.yml  README
ejercicio1/: Makefile.am  config.yml  configure.ac  logging.yml  make-command.sh
ejercicio1/nbproject/: configurations.xml  project.xml
ejercicio1/src/: Makefile.am
ejercicio1/src/administrador/: administrador.cc
ejercicio1/src/finalizador/: ArgParser.cc  ArgParser.h  finalizador.cc
ejercicio1/src/lanzador/: ArgParser.cc  ArgParser.h  lanzador.cc
ejercicio1/src/lib/config/: ConfigParser.cc  ConfigParser.h
ejercicio1/src/lib/logging/: Logger.cc  Logger.h  LoggerRegistry.cc  LoggerRegistry.h
ejercicio1/src/lib/museo/: Museo.h
ejercicio1/src/lib/system/: IPCName.h  Semaphore.cc  SharedVariable.h  System.cc  System.h
ejercicio1/src/lib/utils/: yaml-converters.h
ejercicio1/src/puerta/: ArgParser.cc  ArgParser.h  puerta.cc
ejercicio2/: README  config.yml  configure.ac  logging.yml
ejercicio2/nbproject/: configurations.xml  project.xml
ejercicio2/src/: Makefile.am
ejercicio2/src/administrador/: ArgParser.cc  ArgParser.h  administrador.cc
ejercicio2/src/finalizador/: finalizador.cc
ejercicio2/src/lanzador/: ArgParser.cc  lanzador.cc
ejercicio2/src/lib/config/: ConfigParser.cc  ConfigParser.h
ejercicio2/src/lib/logging/: Logger.cc  Logger.h  LoggerRegistry.cc
ejercicio2/src/lib/museo/: Museo.h  OpCierre.h  OpPersona.h  OpPuerta.h  constantes.h
ejercicio2/src/lib/system/: MessageQueue.h  SharedVariable.h  System.cc  System.h
ejercicio2/src/lib/utils/: yaml-converters.h
ejercicio2/src/mkpersonas/: ArgParser.cc  ArgParser.h  mkpersonas.cc
ejercicio2/src/persona/: ArgParser.cc  ArgParser.h  CtrlPersona.cc  CtrlPersona.h  persona.cc
ejercicio2/src/puerta/: ArgParser.cc  ArgParser.h  puerta.cc
